# FrawdLLM

./: .gitignore  MODEL_CARD.md  README.md  pyproject.toml
notebooks/: inference_tpu.ipynb
scripts/: chat.py  convert_to_hf.py  dpo.py  dpo_modal_100m.py  generate_dpo_modal.py  sft.py  sft_modal_100m.py  test_direct.py  test_dpo_checkpoint.py  test_hf_model.py  train.py  train_modal.py  train_modal_100m.py  upload_to_hf.py
src/: __init__.py
src/fetch_data/: download.py  generate_dpo.py  generate_dpo_responses.py  generate_sft.py  generate_sft_100m.py  prepare_openwebtext.py  rank_dpo_responses.py  tokenizer.py
src/inference/: __init__.py  sample.py
src/model/: __init__.py  attention.py  block.py  config.py  embeddings.py  gpt.py  hf_wrapper.py  mlp.py  rope.py
src/training/: __init__.py  dataset.py  dpo_dataset.py  openwebtext_dataset.py  sft_dataset.py  trainer.py
tests/: __init__.py
tokenizer_100m/: meta.json  tokenizer.json
