[project]
name = "frawdllm"
version = "0.1.0"
description = "FrawdLLM - A learning-focused small language model built from scratch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "datasets>=2.16.0",
    "tokenizers>=0.15.0",
    "wandb>=0.16.0",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "tqdm>=4.66.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "jupyter>=1.0.0",
    "pytest>=7.4.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
